# Query-Visualizer

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/models/: schemas.py
backend/app/services/: visualizer.py
backend/tests/: test_api.py  test_visualizer.py
frontend/: package.json  tailwind.config.mjs
frontend/app/: globals.css  page.tsx
frontend/components/: StepCard.tsx  VisualizationBoard.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  label.tsx  select.tsx  textarea.tsx
frontend/lib/: api.ts  types.ts
